tests/cases/invalid/var-in-else-block/example.mld
var @x = 1
if @x == 0 [
  show "zero"
] else [
  show "nonzero"

  var @results = for @item in @x [
    => @item
  ]

  show `results: @results`
]
